# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] fix/change
# ====================================================================


# 2016-12-13
# --------------------------------------------------------------------
# ~ switch to 21-get-activity-values.py as main/master script
# ~ program now skips the fitting bit if no signals [S] are specified
# ~ program works if there are no backgrounds [B] specified
# ~ add 'reuse' tag to the saved plot names
# ~ dru1 and dru2 with "reuse" now return the exact same results!
# ~ AH! dru1 fitting fails if the fixed K40 scaling is too high
# + new data in join2-1544-master.root


# 2016-12-12
# --------------------------------------------------------------------
# ~ fixed a bug if not using dru1 or dru2 in v20
# + in v14, in func.py I needed to do init mc[loc][iso]['act'] = []
#   and then do mc[loc][iso]["act"].append(-1) for fixed activities


# 2016-12-09
# --------------------------------------------------------------------
# + cut a v2.0 release now that the fit rebinning is fixed
# ~ fixed the rebinscale to work with new v20 format but I still
#   don't understand why it effects the fit results so much
# + applied rebin bug fix to v14 and v20
# ~ FINALLY fixed the fit rebinning issue! I was selecting the wrong
#   subset of bins in the HiE filling section. It needs to look like:
#   hist.SetBinContent(n+np, rsigs[key]['hist'].GetBinContent(fHi[0]+r))


# 2016-12-06
# --------------------------------------------------------------------
# ~ 20-global-input-file.py is the new standard
# ~ cleaned up the comments a bit in 20-global-input-file.py
# + cut release v1.1 based off of 14-set-bkg-activity.py
# ~ it's working! v14 vs v20 is basically identical! Woo Hoo!!
# ~ hacked a bunch of stuff in 20-global-input-file.py to get this
#   working - I'm sure there's some bugs yet to fix